dummy index updated

--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
 			<a href="index.html">HOME</a>
 			<a href="portfolio.html">PORTFOLIO</a>
 			<a href="contact.html">CONTACT</a>
+			<a href="about.html">ABOUT</a>
 		</nav>	
-		<img src="img/testimg1.jpg">
-		<img src="http://mylittlepony.hasbro.com/images/spring2016/ponies/char_fluttershy.png" height="200px">
+		<img src="img/hero.png">
+		<table>
+			<tr>
+				<td><img src="img/quality1.jpg" alt="Diversity"></td>
+				<td><img src="img/quality2.jpg" alt="Integrity"></td>
+				<td><img src="img/quality3.png" alt="Vision"></td>
+			</tr>
+			<tr>
+				<td><h2>Diversity</h2></td>
+				<td><h2>Integrity</h2></td>
+				<td><h2>Vision</h2></td>
+			</tr>
+		</table>		
 		<h1>Patience, grasshopper.... </h1>
-		<h2>Patience, grasshopper.... </h2>
-		<h3>Patience, grasshopper.... </h3>
-		<h4>Patience, grasshopper.... </h4>
-		<h5>Patience, grasshopper.... </h5>
-		<h6>Patience, grasshopper.... </h6>
 		<p><b>Lorem</b> ipsum <i>dolor sit amet</i>, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
