hw1 wireframe push1

--- a/contact.html
+++ b/contact.html
@@ -1,62 +1,48 @@
 <!DOCTYPE html>
 <html>
-<head>	
-	<title>Contact Form</title>
-</head>
-<body>
-
-<form>
-	<label>First Name</br>
-		<input type="text" name="fname" placeholder="Bruce">
-	</label>
-	<br>
-	<label>Last Name</br>
-		<input type="text" name="lname" placeholder="Wayne">
-	</label>
-	<br><label>Password</br>
-		<input type="password" name="pswd" placeholder="password">
-	</label>
-	<br><label>Birthday</br>
-		<input type="date" name="bday">
-	</label>
-	<br><label>Profile Pic</br>
-		<input type="file" name="pic">
-	<br><label>Email</br>
-		<input type="email" name="email" placeholder="email@gmail.com">
-	</label>
-	</label>
-<br>
-<h5>Gender</h5>
-<label>
-	<input type="checkbox"	name="genre" value="metal"> Metal
-</label>
-<br>
-<label>
-	<input type="checkbox"	name="genre" value="R & B"> R & B
-</label>
-<br>
-<label>
-	<input type="checkbox"	name="genre" value="Hip Hop"> Hip Hop
-</label>
-<br>
-<h5>State</h5>
-<select>
-	<option name="state" value="NY">New York</option>
-	<option name="state" value="NJ">New Jersey</option>
-	<option name="state" value="PA">Pennsylvania</option>
-</select>
-
-<br>
-<label>Message
-<br>
-	<textarea name="info" placeholder="my info">
-	</textarea>
-</label>
-
-<br>
-<input type="submit" name="submit" value="Send">
-</p>
-</form>
-
-</body>
+	<head>
+		<title>Hopkinson_root | Contact</title>
+	</head>
+	<body>
+	<header>
+		<nav>
+			<a href="index.html"><img src="img/logo.png" height=30px> HOME</a>
+			<a href="portfolio.html">PORTFOLIO</a>
+			<a href="contact.html">CONTACT</a>
+			<a href="about.html">ABOUT</a>
+		</nav>	
+		<h1>CONTACT PAUL</h1>
+			<table>
+			<tr>
+				<td>Paul Hopkinson
+				<br>25 Chapel Road
+				<br>Brooklyn, NY 11238
+				<br>PH: (718) 915=7209
+				<br><a href="mailto:paul@paul-hopkinson.com">Email: Paul@Paul-Hopkinson.com</a></td>
+				<td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.935126785853!2d-73.98812618459552!3d40.69742637933348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a35752b1b5b%3A0xb046cdc749b54b38!2s25+Chapel+St%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1488246418142" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</td>
+			</tr>
+			<tr>
+				<td colspan=2 align="center"><form><a href="about.html"><input type="submit" name="aboot" value="Learn More Now!"></a></form></td>
+			</tr>	
+		</table>
+		<p>
+		<table>
+					<tr>
+						<td><a href="index.html"><img src="img/logo.png" height=50px>HOME</a>
+							<br><a href="mailto:paul@paul-hopkinson.com">Paul@Paul.Hopkinson.com</a>
+							<br>Phone: (718) 915-7209</td>
+						<td><h2>FUN STUFF</h2>
+							<br><img src="img/quality1.jpg" alt="Diversity" height=30px>
+							<img src="img/quality2.jpg" alt="Integrity" height=30px>
+							<img src="img/quality3.png" alt="Vision" height=30px>
+							<br>&copy;2017 by Paul Hopkinson, all rights reserved.
+						</td>
+						<td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.935126785853!2d-73.98812618459552!3d40.69742637933348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a35752b1b5b%3A0xb046cdc749b54b38!2s25+Chapel+St%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1488243280307" width="100" height="75" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<br>25 Chapel St.
+						<br>Brooklyn, NY 11238
+						</td>
+					</tr>
+				</table>
+		</body>
 </html>
