--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 	<header>
 		<nav>
-			<a href="index.html">HOME</a>
+			<a href="index.html"><img src="img/logo.png" height=30px> HOME</a>
 			<a href="portfolio.html">PORTFOLIO</a>
 			<a href="contact.html">CONTACT</a>
 			<a href="about.html">ABOUT</a>
@@ -14,72 +14,49 @@
 		<img src="img/hero.png">
 		<table>
 			<tr>
-				<td><img src="img/quality1.jpg" alt="Diversity"></td>
-				<td><img src="img/quality2.jpg" alt="Integrity"></td>
-				<td><img src="img/quality3.png" alt="Vision"></td>
+				<td><img src="img/quality1.jpg" alt="Diversity" height=300px></td>
+				<td><img src="img/quality2.jpg" alt="Integrity" height=300px></td>
+				<td><img src="img/quality3.png" alt="Vision" height=300px></td>
 			</tr>
 			<tr>
-				<td><h2>Diversity</h2></td>
-				<td><h2>Integrity</h2></td>
-				<td><h2>Vision</h2></td>
+				<td align="center"><h2>Diversity</h2></td>
+				<td align="center"><h2>Integrity</h2></td>
+				<td align="center"><h2>Vision</h2></td>
 			</tr>
 		</table>		
-		<h1>Patience, grasshopper.... </h1>
-		<p><b>Lorem</b> ipsum <i>dolor sit amet</i>, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. </p>
-		<hr>
-		<p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>
-			<a href="about.html">My About Page</a>
-			<br>
-			<a href="https://www.charlesoakley.com/" target="_blank">FREE OAKLEY!</a>
-		</p>
-		<ol>
-			<li>Widget A</li>
-			<li>Widget B</li>
-				<ul>
-					<li>part 1</li>
-					<li>part 2</li>
-					<li>part 3</li>
-				</ul>
-		</ol>
-		<ul>
-			<li>Thing 1</li>
-			<li>Thing 2</li>
-				<ol>
-					<li>Melo</li>
-					<li>Patrick</li>
-					<li>Charles</li>
-				</ol>
-			<li>Thing 3</li>		
-		</ul>
-		<p>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/13KkSJ7Y0Uc?rel=0" frameborder="0" allowfullscreen></iframe>
-		</p>
-		<table border="1">
-			<tr>
-				<td>Cell 1</td>
-				<td>Cell 2</td>
-				<td>Cell 3</td>
-				<td>Cell 4</td>
-			</tr>
-			<tr>
-				<td colspan="4">Leaving no blank cells.</td>
-			</tr>
-			<tr>
-				<td rowspan="2">Spanning 2 rows</td>
-				<td align="middle">-</td>
-				<td align="middle">-</td>
-				<td align="middle">-</td>
-			</tr>
-			<tr>
-				<td>2nd cell</td>
-				<td>3rd cell</td>
-				<td>4th cell</td>
-			</tr>	
-	</body>
+				<p>
+				<table>
+					<tr>
+						<td><iframe width="560" height="315" src="https://www.youtube.com/embed/qftdlZngzgo?rel=0" frameborder="0" allowfullscreen></iframe></td>
+						<td><h2>Dogged Determination</h2>
+							<ul>
+								<li>Agility to tackle new technologies</li>
+								<li>Strength to overcome the toughest obstacles</li>
+								<li>Speed to stay ahead of the competition</li>
+							</ul>
+							<form><a href="about.html"><input type="submit" name="submit" value="Learn More Now!"></a></form>
+						</td>
+					</tr>
+				</table>				
+				</p>
+					<p>
+				<table>
+					<tr>
+						<td><a href="index.html"><img src="img/logo.png" height=50px>HOME</a>
+							<br><a href="mailto:paul@paul-hopkinson.com">Paul@Paul.Hopkinson.com</a>
+							<br>Phone: (718) 915-7209</td>
+						<td><h2>FUN STUFF</h2>
+							<br><img src="img/quality1.jpg" alt="Diversity" height=30px>
+							<img src="img/quality2.jpg" alt="Integrity" height=30px>
+							<img src="img/quality3.png" alt="Vision" height=30px>
+							<br>&copy;2017 by Paul Hopkinson, all rights reserved.
+						</td>
+						<td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.935126785853!2d-73.98812618459552!3d40.69742637933348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a35752b1b5b%3A0xb046cdc749b54b38!2s25+Chapel+St%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1488243280307" width="100" height="75" frameborder="0" style="border:0" allowfullscreen></iframe>
+						<br>25 Chapel St.
+						<br>Brooklyn, NY 11238
+						</td>
+					</tr>
+				</table>				
+				</p>
+			</body>
 </html>
