--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</nav>	
 		<img src="img/hero.png">
 		<table>
-			<tr>
+			<tr align="center">
 				<td><img src="img/quality1.jpg" alt="Diversity" height=300px></td>
 				<td><img src="img/quality2.jpg" alt="Integrity" height=300px></td>
 				<td><img src="img/quality3.png" alt="Vision" height=300px></td>
@@ -23,40 +23,37 @@
 				<td align="center"><h2>Integrity</h2></td>
 				<td align="center"><h2>Vision</h2></td>
 			</tr>
-		</table>		
-				<p>
-				<table>
-					<tr>
-						<td><iframe width="560" height="315" src="https://www.youtube.com/embed/qftdlZngzgo?rel=0" frameborder="0" allowfullscreen></iframe></td>
-						<td><h2>Dogged Determination</h2>
-							<ul>
-								<li>Agility to tackle new technologies</li>
-								<li>Strength to overcome the toughest obstacles</li>
-								<li>Speed to stay ahead of the competition</li>
-							</ul>
-							<form><a href="about.html"><input type="submit" name="submit" value="Learn More Now!"></a></form>
-						</td>
-					</tr>
-				</table>				
-				</p>
-					<p>
-				<table>
-					<tr>
-						<td><a href="index.html"><img src="img/logo.png" height=50px>HOME</a>
-							<br><a href="mailto:paul@paul-hopkinson.com">Paul@Paul.Hopkinson.com</a>
-							<br>Phone: (718) 915-7209</td>
-						<td><h2>FUN STUFF</h2>
-							<br><img src="img/quality1.jpg" alt="Diversity" height=30px>
-							<img src="img/quality2.jpg" alt="Integrity" height=30px>
-							<img src="img/quality3.png" alt="Vision" height=30px>
-							<br>&copy;2017 by Paul Hopkinson, all rights reserved.
-						</td>
-						<td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.935126785853!2d-73.98812618459552!3d40.69742637933348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a35752b1b5b%3A0xb046cdc749b54b38!2s25+Chapel+St%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1488243280307" width="100" height="75" frameborder="0" style="border:0" allowfullscreen></iframe>
-						<br>25 Chapel St.
-						<br>Brooklyn, NY 11238
-						</td>
-					</tr>
-				</table>				
-				</p>
-			</body>
+			<tr align="center">
+				<td><iframe width="560" height="315" src="https://www.youtube.com/embed/qftdlZngzgo?rel=0" frameborder="0" allowfullscreen></iframe></td>
+				<td></td>
+				<td><h2>Dogged Determination</h2>
+					<ul>
+						<li>Agility to tackle new situations and requirements</li>
+						<li>Strength to overcome the toughest obstacles</li>
+						<li>Speed to stay ahead of the competition & catch the prey</li>
+						<li>Vision to track the smallest changes in large fields</li>
+						<li>Eagerness to work hard and bring order to chaos</li>
+						<li>Stamina to determine priorities & deliver from top to bottom</li>
+					</ul>
+					<form><a href="about.html"><input type="submit" name="submit" value="Learn More Now!"></a></form>
+				</td>
+			</tr>
+			<tr>
+				<td><a href="index.html"><img src="img/logo.png" height=50px>HOME</a>
+					<br><a href="mailto:paul@paul-hopkinson.com">Paul@Paul.Hopkinson.com</a>
+					<br>Phone: (718) 915-7209</td>
+				<td><h2>FUN STUFF</h2>
+					<br><img src="img/quality1.jpg" alt="Diversity" height=30px>
+					<img src="img/quality2.jpg" alt="Integrity" height=30px>
+					<img src="img/quality3.png" alt="Vision" height=30px>
+					<br>&copy;2017 by Paul Hopkinson, all rights reserved.
+				</td>
+				<td><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.935126785853!2d-73.98812618459552!3d40.69742637933348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a35752b1b5b%3A0xb046cdc749b54b38!2s25+Chapel+St%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1488243280307" width="100" height="75" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<br>25 Chapel St.
+					<br>Brooklyn, NY 11238
+				</td>
+			</tr>
+		</table>
+		</p>
+	</body>
 </html>
